logs/awesome-print.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/awesome_print'...
Compiling './lib/python3.5/site-packages/awesome_print/awesome_print.py'...
***   File "./lib/python3.5/site-packages/awesome_print/awesome_print.py", line 14
    print format(arg)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/awesome_print/test'...
Compiling './lib/python3.5/site-packages/awesome_print/test/awesome_print_test.py'...
***   File "./lib/python3.5/site-packages/awesome_print/test/awesome_print_test.py", line 32
    self.assertEqual(format(12345l), '\x1b[1;34m12345\x1b[0m')
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/awesome_print-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
